--- a/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.fxml
@@ -9,7 +9,7 @@
       maxWidth="Infinity"
       VBox.vgrow="ALWAYS"
       fx:controller="ru.nucodelabs.gem.view.charts.ModelSectionController"
-      stylesheets="@CrossSection.css">
+      stylesheets="@ModelSection.css">
 
     <AreaChart fx:id="chart" maxWidth="Infinity"
                maxHeight="Infinity" animated="false" legendVisible="false">
@@ -17,8 +17,8 @@
             <NumberAxis fx:id="xAxis" label="X (m)" side="TOP" prefWidth="-Infinity" autoRanging="false"/>
         </xAxis>
         <yAxis>
-            <NumberAxis fx:id="yAxis" label="Z (m)" side="LEFT" prefHeight="500" maxHeight="-Infinity"/>
+            <NumberAxis fx:id="yAxis" label="Z (m)" side="LEFT" prefHeight="500" maxHeight="-Infinity"
+                        autoRanging="false"/>
         </yAxis>
     </AreaChart>
-
 </VBox>
