--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -112,15 +112,18 @@
                                     <Label text="X"/>
                                     <Label text="="/>
                                     <Label fx:id="xCoordLbl" text="-"/>
+                                    <Label text="m"/>
                                     <HBox HBox.hgrow="ALWAYS"/>
                                     <Label text="Z"/>
                                     <Label text="="/>
                                     <TextField promptText="Z" fx:id="picketZ" prefWidth="50" onAction="#submitZ"/>
+                                    <Label text="m"/>
                                     <fx:include source="SmallDivider.fxml"/>
                                     <Label text="%offset"/>
                                     <Label text="="/>
                                     <TextField promptText="%offset" fx:id="picketOffsetX" prefWidth="50"
                                                onAction="#submitOffsetX"/>
+                                    <Label text="m"/>
                                     <fx:include source="SmallDivider.fxml"/>
                                     <Button text="%inverse" onAction="#inverseSolve">
                                         <graphic>
