--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/heatmap/HeatMap.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/heatmap/HeatMap.fxml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
+<?import java.lang.Double?>
 <fx:root xmlns:fx="http://javafx.com/fxml" type="javafx.scene.layout.VBox"
          xmlns="http://javafx.com/javafx"
-         fx:id="container">
-    <Pane prefWidth="${container.width}" prefHeight="${container.height}">
-        <NumberAxis fx:id="xAxis" side="TOP" autoRanging="false"
-                    prefWidth="${canvas.width}"
-                    layoutY="${canvas.height}"
-                    layoutX="${yAxis.width}"/>
-        <NumberAxis fx:id="yAxis" side="LEFT" autoRanging="false"
-                    prefHeight="${canvas.height}"/>
-        <Canvas fx:id="canvas" width="${container.width - yAxis.width}" height="${container.height - xAxis.height}"
-                layoutX="${yAxis.width}"/>
-    </Pane>
+         maxHeight="Infinity"
+         maxWidth="Infinity"
+         fx:id="container" alignment="CENTER">
+    <fx:define>
+        <Double fx:id="padding" fx:value="16"/>
+    </fx:define>
+    <VBox prefHeight="$padding"/>
+    <HBox maxWidth="Infinity" maxHeight="Infinity" alignment="CENTER">
+        <HBox prefWidth="$padding"/>
+        <Pane fx:id="pane" prefWidth="${container.width - padding * 2}" prefHeight="${container.height - padding * 2}">
+            <Canvas fx:id="canvas"/>
+        </Pane>
+        <HBox prefWidth="$padding"/>
+    </HBox>
+    <VBox prefHeight="$padding"/>
 </fx:root>
