--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -139,7 +139,7 @@
                                     <SplitPane orientation="VERTICAL" dividerPositions="0.3" maxHeight="Infinity"
                                                VBox.vgrow="ALWAYS">
                                         <fx:include fx:id="misfitStacks" source="../charts/MisfitStacks.fxml"/>
-                                        <fx:include fx:id="vesCurves" source="../charts/VESCurves.fxml"/>
+                                        <fx:include fx:id="vesCurves" source="../charts/VesCurves.fxml"/>
                                     </SplitPane>
                                     <TabPane VBox.vgrow="ALWAYS">
                                         <Tab text="%experimentalTable" closable="false">
