--- a/src/main/resources/ru/nucodelabs/gem/view/charts/VesCurves.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/VesCurves.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import ru.nucodelabs.gem.view.PowerOf10Formatter?>
@@ -12,8 +13,13 @@
       stylesheets="@../common.css, @VESCurves.css"
       VBox.vgrow="ALWAYS"
       fx:controller="ru.nucodelabs.gem.view.charts.VesCurvesController">
-    <HBox maxWidth="Infinity">
+    <HBox maxWidth="Infinity" alignment="CENTER_RIGHT">
         <Label styleClass="uclabel" text="%ves" VBox.vgrow="NEVER"/>
+        <HBox maxWidth="Infinity" HBox.hgrow="ALWAYS"/>
+        <HBox spacing="5" style="-fx-padding: 5">
+            <Button text="+" onAction="#zoomIn"/>
+            <Button text="-" onAction="#zoomOut"/>
+        </HBox>
     </HBox>
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" animated="false"
                onMouseDragged="#navigateUsingDrag" onMousePressed="#startDrag">
