--- a/src/main/resources/ru/nucodelabs/gem/view/charts/VesCurves.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/VesCurves.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import ru.nucodelabs.gem.view.PowerOf10Formatter?>
 <VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
@@ -17,8 +19,20 @@
         <Label styleClass="uclabel" text="%ves" VBox.vgrow="NEVER"/>
         <HBox maxWidth="Infinity" HBox.hgrow="ALWAYS"/>
         <HBox spacing="5" style="-fx-padding: 5">
-            <Button text="+" onAction="#zoomIn"/>
-            <Button text="-" onAction="#zoomOut"/>
+            <Button contentDisplay="GRAPHIC_ONLY" onAction="#zoomIn">
+                <graphic>
+                    <ImageView fitHeight="15" fitWidth="15">
+                        <Image url="@../../../../../img/ui_icons/zoom_in.png"/>
+                    </ImageView>
+                </graphic>
+            </Button>
+            <Button contentDisplay="GRAPHIC_ONLY" onAction="#zoomOut">
+                <graphic>
+                    <ImageView fitHeight="15" fitWidth="15">
+                        <Image url="@../../../../../img/ui_icons/zoom_out.png"/>
+                    </ImageView>
+                </graphic>
+            </Button>
         </HBox>
     </HBox>
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" animated="false"
