zoom & drag view encapsulated and reusable

--- a/src/main/resources/ru/nucodelabs/gem/view/charts/VesCurves.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/VesCurves.fxml
@@ -36,7 +36,7 @@
         </HBox>
     </HBox>
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" animated="false"
-               onMouseDragged="#navigateUsingDrag" onMousePressed="#startDrag">
+               onMouseDragged="#chartOnMouseDragged" onMousePressed="#chartOnMousePressed">
         <xAxis>
             <NumberAxis fx:id="lineChartXAxis"
                         forceZeroInRange="false"
