--- a/src/main/resources/ru/nucodelabs/gem/view/charts/PseudoSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/PseudoSection.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import ru.nucodelabs.gem.view.usercontrols.heatmap.HeatMap?>
 <VBox xmlns:fx="http://javafx.com/fxml/1"
@@ -12,10 +13,13 @@
       stylesheets="@../common.css, @VESCurves.css"
       VBox.vgrow="ALWAYS"
       fx:controller="ru.nucodelabs.gem.view.charts.PseudoSectionController">
-    <Label text="%pseudoSection" styleClass="uclabel"/>
+    <HBox alignment="CENTER_LEFT">
+        <Label text="%pseudoSection" styleClass="uclabel"/>
+    </HBox>
+
     <HeatMap fx:id="chart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" minWidth="0" minHeight="0">
         <xAxis>
-            <NumberAxis fx:id="xAxis" side="TOP" label="X (m)" minorTickVisible="false"/>
+            <NumberAxis fx:id="xAxis" side="BOTTOM" label="X (m)" minorTickVisible="false"/>
         </xAxis>
         <yAxis>
             <NumberAxis fx:id="yAxis" side="LEFT" label="AB/2 (m)" minorTickVisible="false"/>
