--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -62,9 +62,8 @@
                                             VBox.vgrow="ALWAYS"/>
                                 <VBox HBox.hgrow="ALWAYS">
                                     <HBox>
-                                        <fx:include fx:id="picketsBar" source="PicketsBar.fxml" HBox.hgrow="ALWAYS"/>
                                         <HBox>
-                                            <Button fx:id="addPicketBtn" prefWidth="50" minWidth="50" maxWidth="50"
+                                            <Button fx:id="addPicketBtn" prefWidth="65" minWidth="65" maxWidth="65"
                                                     onAction="#addNewPicket" stylesheets="@PicketsBar.css"
                                                     HBox.hgrow="NEVER" contentDisplay="GRAPHIC_ONLY">
                                                 <graphic>
@@ -74,6 +73,8 @@
                                                 </graphic>
                                             </Button>
                                         </HBox>
+                                        <fx:include fx:id="picketsBar" source="PicketsBar.fxml" HBox.hgrow="ALWAYS"/>
+                                        <HBox prefWidth="16"/>
                                     </HBox>
                                     <SplitPane orientation="VERTICAL" maxHeight="Infinity" maxWidth="Infinity"
                                                HBox.hgrow="ALWAYS">
