--- a/src/main/resources/ru/nucodelabs/gem/view/common.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/common.css
@@ -171,11 +171,11 @@
 
 .tooltip {
     -fx-effect: none;
-    -fx-background-color: rgba(255, 255, 255, 0.9);
-    -fx-text-fill: Gray;
+    -fx-background-color: rgba(255, 255, 255, 0.95);
+    -fx-text-fill: DarkSlateGray;
     -fx-font-size: 12;
     -fx-border-width: 1;
-    -fx-border-color: Gray;
+    -fx-border-color: DarkSlateGray;
     -fx-background-radius: 5;
     -fx-border-radius: 5;
 }
