--- a/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
@@ -37,23 +37,47 @@
             </VBox>
         </placeholder>
         <columns>
-            <TableColumn fx:id="indexCol" maxWidth="35" prefWidth="35" sortable="false" text="N"
+            <TableColumn fx:id="indexCol" maxWidth="35" prefWidth="35" sortable="false" text="№"
                          styleClass="centered-column"
                          resizable="false" editable="false"/>
             <TableColumn fx:id="powerCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
-                         text="%modelPower" sortable="false" onEditCommit="#onEditCommit"/>
+                         sortable="false" onEditCommit="#onEditCommit">
+                <graphic>
+                    <Label text="%power">
+                        <tooltip>
+                            <Tooltip text="%powerFull"/>
+                        </tooltip>
+                    </Label>
+                </graphic>
+            </TableColumn>
             <TableColumn fx:id="resistanceCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
-                         text="%modelResistanceApparent" sortable="false" onEditCommit="#onEditCommit"/>
-            <TableColumn fx:id="zCol" text="Z (m)" maxWidth="Infinity" minWidth="20.0"
-                         sortable="false" editable="false" prefWidth="100"/>
+                         sortable="false" onEditCommit="#onEditCommit">
+                <graphic>
+                    <Label text="%resistance">
+                        <tooltip>
+                            <Tooltip text="%resistanceFull"/>
+                        </tooltip>
+                    </Label>
+                </graphic>
+            </TableColumn>
+            <TableColumn fx:id="zCol" maxWidth="Infinity" minWidth="20.0"
+                         sortable="false" editable="false" prefWidth="100">
+                <graphic>
+                    <Label text="%z">
+                        <tooltip>
+                            <Tooltip text="%zFull"/>
+                        </tooltip>
+                    </Label>
+                </graphic>
+            </TableColumn>
         </columns>
     </TableView>
     <HBox spacing="5" style="-fx-padding: 5">
         <TextField fx:id="indexTextField" promptText="N"
                    prefWidth="45" minWidth="45" onAction="#addLayer"/>
-        <TextField fx:id="powerTextField" promptText="%modelPower"
+        <TextField fx:id="powerTextField" promptText="%power"
                    maxWidth="Infinity" onAction="#addLayer"/>
-        <TextField fx:id="resistanceTextField" promptText="%modelResistanceApparent"
+        <TextField fx:id="resistanceTextField" promptText="%resistance"
                    maxWidth="Infinity" onAction="#addLayer"/>
         <Button fx:id="addBtn" text="Добавить слой" onAction="#addLayer" minWidth="150" disable="true">
             <graphic>
