палитра справа + фиксированные ширины осей, позволяет подстроить все как надо

--- a/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.fxml
@@ -23,7 +23,7 @@
         </xAxis>
         <yAxis>
             <NumberAxis fx:id="yAxis" label="Z (m)" side="LEFT" prefHeight="500" maxHeight="-Infinity"
-                        autoRanging="false" minorTickVisible="false"/>
+                        autoRanging="false" minorTickVisible="false" prefWidth="65"/>
         </yAxis>
     </AreaChart>
 </VBox>
