--- a/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.css
@@ -1,19 +1,25 @@
-.chart-area-symbol {
+/*.chart-area-symbol {*/
+/*    -fx-background-color: transparent;*/
+/*    -fx-border-color: transparent;*/
+/*}*/
+
+.chart-symbol {
     -fx-background-color: transparent;
     -fx-border-color: transparent;
+    /*-fx-border-color: black;*/
 }
 
-.chart-series-area-line {
-    /*-fx-stroke: BLACK;*/
-    -fx-stroke: transparent;
-}
+/*.chart-series-area-line {*/
+/*    !*-fx-stroke: BLACK;*!*/
+/*    -fx-stroke: transparent;*/
+/*}*/
 
-.chart-plot-background {
-    -fx-background-color: white;
-}
+/*.chart-plot-background {*/
+/*    -fx-background-color: white;*/
+/*}*/
 
-#chart {
-    -fx-grid-lines-visible: false;
-    -fx-horizontal-grid-lines-visible: false;
-    -fx-vertical-grid-lines-visible: false;
-}
+/*#chart {*/
+/*    -fx-grid-lines-visible: false;*/
+/*    -fx-horizontal-grid-lines-visible: false;*/
+/*    -fx-vertical-grid-lines-visible: false;*/
+/*}*/
