--- a/src/main/resources/ru/nucodelabs/gem/view/charts/ColorAxis.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/ColorAxis.fxml
@@ -9,8 +9,8 @@
 <VBox xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
       fx:controller="ru.nucodelabs.gem.view.charts.ColorAxisController"
-      maxHeight="Infinity" prefWidth="85.0" stylesheets="@ModelSection.css"
-      onContextMenuRequested="#openContextMenu">
+      maxHeight="Infinity" maxWidth="70" minWidth="70" stylesheets="@ModelSection.css"
+      onContextMenuRequested="#openContextMenu" style="-fx-padding: 0 0 0 -15;">
     <fx:define>
         <Stage fx:id="configWindow" resizable="false">
             <scene>
