--- a/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.fxml
@@ -16,13 +16,13 @@
         <Label text="Модель, разрез" styleClass="uclabel"/>
     </HBox>
     <PolygonChart fx:id="chart" maxWidth="Infinity"
-                  maxHeight="Infinity" animated="false" legendVisible="false">
+                  maxHeight="Infinity" animated="false" legendVisible="false" style="-fx-padding: -5 0 -5 -10;">
         <xAxis>
-            <NumberAxis fx:id="xAxis" label="X (m)" side="BOTTOM" prefWidth="-Infinity" autoRanging="false"
+            <NumberAxis fx:id="xAxis" label="%x" side="BOTTOM" prefWidth="-Infinity" autoRanging="false"
                         minorTickVisible="false" tickUnit="25"/>
         </xAxis>
         <yAxis>
-            <NumberAxis fx:id="yAxis" label="Z (m)" side="LEFT" prefHeight="500" maxHeight="-Infinity"
+            <NumberAxis fx:id="yAxis" label="%z" side="LEFT" prefHeight="500" maxHeight="-Infinity"
                         autoRanging="false" minorTickVisible="false" prefWidth="65" tickUnit="25"/>
         </yAxis>
     </PolygonChart>
