--- a/src/main/resources/ru/nucodelabs/gem/view/charts/PseudoSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/PseudoSection.fxml
@@ -19,10 +19,10 @@
 
     <HeatMap fx:id="chart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" minWidth="0" minHeight="0">
         <xAxis>
-            <NumberAxis fx:id="xAxis" side="BOTTOM" label="X (m)" minorTickVisible="false" tickUnit="25"/>
+            <NumberAxis fx:id="xAxis" side="BOTTOM" label="%x" minorTickVisible="false" tickUnit="25"/>
         </xAxis>
         <yAxis>
-            <NumberAxis fx:id="yAxis" side="LEFT" label="AB/2 (m)" minorTickVisible="false" prefWidth="65"
+            <NumberAxis fx:id="yAxis" side="LEFT" label="%ab2" minorTickVisible="false" prefWidth="65"
                         tickUnit="25"/>
         </yAxis>
     </HeatMap>
