--- a/src/main/resources/ru/nucodelabs/gem/view/common.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/common.css
@@ -3,6 +3,11 @@
     -fx-focus-color: ForestGreen;
 }
 
+.debug {
+    -fx-border-color: red;
+    -fx-border-width: 1;
+}
+
 .button {
     -fx-border-color: LightGray;
     -fx-border-width: 1px;
