--- a/src/main/resources/ru/nucodelabs/gem/view/charts/MisfitStacks.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/MisfitStacks.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
+<?import ru.nucodelabs.gem.view.control.chart.LogarithmicAxis?>
 <VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
       alignment="CENTER"
       maxHeight="Infinity"
@@ -21,9 +22,9 @@
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" title="\%"
                titleSide="LEFT" minHeight="0" minWidth="0" animated="false">
         <xAxis>
-            <NumberAxis fx:id="lineChartXAxis" forceZeroInRange="false"
-                        side="BOTTOM" minorTickVisible="false" tickLabelsVisible="false" tickMarkVisible="false"
-                        tickUnit="100.0" autoRanging="false" lowerBound="-1" upperBound="4"/>
+            <LogarithmicAxis fx:id="lineChartXAxis"
+                             side="BOTTOM" minorTickVisible="false" tickLabelsVisible="false" tickMarkVisible="false"
+                             autoRanging="false" lowerBound="0.01" upperBound="1e4"/>
         </xAxis>
         <yAxis>
             <NumberAxis fx:id="lineChartYAxis" cache="true" forceZeroInRange="false"
