--- a/src/main/resources/ru/nucodelabs/gem/view/charts/VesCurves.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/VesCurves.fxml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<?import ru.nucodelabs.gem.view.PowerOf10Formatter?>
+<?import javafx.util.converter.DoubleStringConverter?>
+<?import ru.nucodelabs.gem.view.control.chart.LogarithmicAxis?>
 <VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
       alignment="CENTER"
       maxHeight="Infinity"
       maxWidth="Infinity"
-      stylesheets="@../common.css, @VESCurves.css"
+      stylesheets="@../common.css, @VesCurves.css"
       VBox.vgrow="ALWAYS"
       fx:controller="ru.nucodelabs.gem.view.charts.VesCurvesController">
     <HBox maxWidth="Infinity" alignment="CENTER_RIGHT">
@@ -38,32 +38,28 @@
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" animated="false"
                onMouseDragged="#chartOnMouseDragged" onMousePressed="#chartOnMousePressed">
         <xAxis>
-            <NumberAxis fx:id="lineChartXAxis"
-                        forceZeroInRange="false"
-                        label="AB/2 (m)"
-                        side="BOTTOM"
-                        tickUnit="1"
-                        autoRanging="false"
-                        lowerBound="-1" upperBound="4"
-                        minorTickVisible="false">
+            <LogarithmicAxis fx:id="lineChartXAxis"
+                             label="AB/2 (m)"
+                             side="BOTTOM"
+                             autoRanging="false"
+                             lowerBound="0.01" upperBound="1e4"
+                             minorTickVisible="false">
                 <tickLabelFormatter>
-                    <PowerOf10Formatter/>
+                    <DoubleStringConverter/>
                 </tickLabelFormatter>
-            </NumberAxis>
+            </LogarithmicAxis>
         </xAxis>
         <yAxis>
-            <NumberAxis fx:id="lineChartYAxis"
-                        forceZeroInRange="false"
-                        label="ρₐ (Ω‧m)"
-                        side="LEFT"
-                        tickUnit="1"
-                        autoRanging="false"
-                        lowerBound="0" upperBound="4"
-                        minorTickVisible="false">
+            <LogarithmicAxis fx:id="lineChartYAxis"
+                             label="ρₐ (Ω‧m)"
+                             side="LEFT"
+                             autoRanging="false"
+                             lowerBound="0" upperBound="10e4"
+                             minorTickVisible="false">
                 <tickLabelFormatter>
-                    <PowerOf10Formatter/>
+                    <DoubleStringConverter/>
                 </tickLabelFormatter>
-            </NumberAxis>
+            </LogarithmicAxis>
         </yAxis>
     </LineChart>
 </VBox>
