--- a/src/main/resources/ru/nucodelabs/gem/view/charts/VesCurves.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/VesCurves.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.util.converter.DoubleStringConverter?>
-<?import ru.nucodelabs.gem.view.control.chart.LogarithmicAxis?>
+<?import ru.nucodelabs.gem.view.control.chart.log.LogarithmicAxis?>
+<?import ru.nucodelabs.gem.view.main.UIConstantsKt?>
 <VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
       alignment="CENTER"
       maxHeight="Infinity"
@@ -38,19 +39,20 @@
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" animated="false"
                onMouseDragged="#chartOnMouseDragged" onMousePressed="#chartOnMousePressed">
         <xAxis>
-            <LogarithmicAxis fx:id="lineChartXAxis"
+            <LogarithmicAxis fx:id="xAxis"
                              label="AB/2 (m)"
                              side="BOTTOM"
                              autoRanging="false"
                              lowerBound="0.01" upperBound="1e4"
-                             minorTickVisible="false">
+                             minorTickVisible="false"
+                             tickLabelRotation="-45">
                 <tickLabelFormatter>
                     <DoubleStringConverter/>
                 </tickLabelFormatter>
             </LogarithmicAxis>
         </xAxis>
         <yAxis>
-            <LogarithmicAxis fx:id="lineChartYAxis"
+            <LogarithmicAxis fx:id="yAxis"
                              label="ρₐ (Ω‧m)"
                              side="LEFT"
                              autoRanging="false"
@@ -59,6 +61,9 @@
                 <tickLabelFormatter>
                     <DoubleStringConverter/>
                 </tickLabelFormatter>
+                <prefWidth>
+                    <UIConstantsKt fx:constant="LEFT_AXIS_WIDTH"/>
+                </prefWidth>
             </LogarithmicAxis>
         </yAxis>
     </LineChart>
