--- a/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.fxml
@@ -26,7 +26,7 @@
             <NumberAxis fx:id="yAxis" label="%z" side="LEFT" prefHeight="500" maxHeight="-Infinity"
                         autoRanging="false" minorTickVisible="false" tickUnit="25">
                 <prefWidth>
-                    <UIConstantsKt fx:constant="TOP_CHARTS_LEFT_AXIS_WIDTH"/>
+                    <UIConstantsKt fx:constant="LEFT_AXIS_WIDTH"/>
                 </prefWidth>
             </NumberAxis>
         </yAxis>
